--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -14,6 +14,7 @@ security:
                     admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
 
     firewalls:
+
         dev:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
@@ -22,18 +23,30 @@ security:
             pattern:  ^/demo/secured/login$
             security: false
 
-        secured_area:
-            pattern:    ^/demo/secured/
-            form_login:
-                check_path: _security_check
-                login_path: _demo_login
-            logout:
-                path:   _demo_logout
-                target: _demo
+        #secured_area:
+        #    pattern:    ^/demo/secured/
+        #    form_login:
+        #        check_path: _security_check
+        #        login_path: _demo_login
+        #    logout:
+        #        path:   _demo_logout
+        #        target: _demo
+
             #anonymous: ~
             #http_basic:
             #    realm: "Secured Demo Area"
 
-    access_control:
-        - { path: ^/demo/secured/hello/admin/, roles: ROLE_ADMIN }
+        main:
+            pattern:    ^/
+            fp_openid:  ~
+            logout:       true
+            anonymous:    true
+
+    #access_control:
+        #- { path: ^/demo/secured/hello/admin/, roles: ROLE_ADMIN }
+
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+
+    access_control:
+        - { path: ^/login_openid$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/demo/secured, role: IS_AUTHENTICATED_OPENID }
