--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -63,3 +63,7 @@ swiftmailer:
     username:  %mailer_user%
     password:  %mailer_password%
     spool:     { type: memory }
+
+fp_open_id:
+    db_driver: orm
+    identity_class: Acme\DemoBundle\Entity\OpenIdIdentity
