--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,11 +7,12 @@ security:
         ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
-        in_memory:
-            memory:
-                users:
-                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+        # the order is important here
+        openid_user_manager:
+            id: acme.demo.openid_user_manager # the name of the service
+        # keep your database provider below! it may look like this:
+        database:
+            entity: { class: AcmeDemoBundle:User, property: username }
 
     firewalls:
 
@@ -38,9 +39,11 @@ security:
 
         main:
             pattern:    ^/
-            fp_openid:  ~
             logout:       true
             anonymous:    true
+            fp_openid:
+                create_user_if_not_exists: true # so createUserFromIdentity method will be called
+                provider: openid_user_manager # cf below
 
     #access_control:
         #- { path: ^/demo/secured/hello/admin/, roles: ROLE_ADMIN }
@@ -50,3 +53,4 @@ security:
     access_control:
         - { path: ^/login_openid$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/demo/secured, role: IS_AUTHENTICATED_OPENID }
+        - { path: ^/demo/secured/hello/admin/, role: ROLE_ADMIN }
